feat(remove experiments)

--- a/week-01/day-01/Workshop/index.html
+++ b/week-01/day-01/Workshop/index.html
@@ -10,8 +10,7 @@
   <body>
     <div class="content">
     <div class="menu">
-      <!--<img src="logo.png" alt="frog">-->
-      
+      <img src="logo.png" alt="frog">
       <div class="navbar">
       <nav>
         <ul>
