feat(day-03):exercise5 add content

--- a/week-01/day-03/exercise5/index.html
+++ b/week-01/day-03/exercise5/index.html
@@ -5,21 +5,23 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1></h1>
-    <h2></h2>
-    <p></p>
-    <h2></h2>
+    <h1>Building things is fun</h1>
+    <h2>Hello from Green Fox</h2>
+    <p>Poison dart frog (also known as dart-poison frog, poison frog or formerly known as poison arrow frog) is the common name of a group of frogs in the family Dendrobatidae which are native to tropical Central and South America. These species are diurnal and often have brightly colored bodies. This bright coloration is correlated with the toxicity of the species, making them aposematic. Some species of the family Dendrobatidae exhibit extremely bright coloration along with high toxicity, while others have cryptic coloration with minimal to no amount of observed toxicity.
+    </p>
+    <h2>Let's see a list</h2>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-        <ol></ol>
-        <li></li>
-        <li></li>
-        <li></li>        
-        <li></li>
-      <li></li>      
+      <li>This is</li>
+      <li>a very nice</li>
+      <li>list</li>
+      <li>on the first level</li>
+        <ol>
+        <li>but it</li>
+        <li>can go</li>
+        <li>deeper</li>
+        <li>and notice I have roman numbering!</li>        
+        </ol>
+      <li>back to normal</li>      
     </ul>
   <body>
 <html>
