--- a/week-01/day-03/exercise4/index.html
+++ b/week-01/day-03/exercise4/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <title>exercise4</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <h1>Code Example for Paragraph</h1>
-    <span>
+    <div>
         <xmp><p></xmp>
         <p>this is a paragraph</p>
         <xmp></p></xmp>
-    </span>
+    </div>
 </body>
