feat(day-04):add form html

--- a/week-01/day-04/index.html
+++ b/week-01/day-04/index.html
@@ -10,13 +10,72 @@
     <div class="back">
       <div class="main">
         <header>
-          <h1>blalkdd</h1>
+          <h1>Profil</h1>
         </header>
         <div class="content">
-          <div class="personal"></div>
-          <div class="contact"></div>
-        </div>
-        <footer></footer>
+          <div class="personal">
+            <div class="input">
+              <h2>Személyes adatok</h2>
+            </div>
+            <form class="form1">
+              <div>
+                <legend>Név</legend>
+                <input type="name"/>
+              </div>
+              <div>
+                <legend>Születési éved</legend>
+                <input type="number" placeholder="pl. 1984"/>
+              </div>
+              <div>
+                <legend>Nemed</legend>
+                <input type="radio" id="woman"/>
+                <label for="woman">nő</label>
+                <input type="radio" id="man"/>
+                <label for="man">férfi</label>
+              </div>
+              <div>
+                <legend>Milyen márkákat szeretsz?</legend>
+                <input type="checkbox" id="adidas"/>
+                <label for="adidas">Adidas</label>
+                <input type="checkbox" id="apple"/>
+                <label for="apple">Apple</label>
+                <input type="checkbox" id="coca-cola"/>
+                <label for="coca-cola">Coca-Cola</label>
+                <input type="checkbox" id="mazda"/>
+                <label for="mazda">Mazda</label>
+                <input type="checkbox" id="nike"/>
+                <label for="nike">Nike</label>
+                <input type="checkbox" id="opel"/>
+                <label for="opel">Opel</label>
+                <input type="checkbox" id="ray-ban"/>
+                <label for="ray-ban">Ray-Ban</label>
+                <input type="checkbox" id="starbucks"/>
+                <label for="starbucks">Starbucks</label>
+                <input type="checkbox" id="tesla"/>
+                <label for="tesla">Tesla</label>
+                <input type="checkbox" id="yahoo"/>
+                <label for="yahoo">Yahoo</label>
+              </div>
+              <h2>Többet is választhatsz!</h2>
+              </div>   
+            </form>
+            <form class="form">                                       
+              <div class="contact">
+                <h2>Kapcsolat</h2>
+                <label for="tel">Telefonszám</label>                
+                <input type="tel" id="tel"/>
+                <label for="email">E-mail cím</label>                
+                <input type="email" id="email"/>
+                <label for="facebook">Facebook profilod</label>                
+                <input type="url" id="facebook"/>
+                <label for="twitter">Twitter profilod</label>                
+                <input type="url" id="twitter"/>
+                <label for="house">Milyen házban laksz?</label>                                                                                                
+                <input type="name" id="house"/>                                                                              
+              </div>
+            </form>
+          </div>
+          <footer></footer>
       </div>
     </div>
   </body>
