feat(day-03):fix html tags

--- a/week-01/day-03/exercise5/index.html
+++ b/week-01/day-03/exercise5/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>exercise5</title>
     <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
   </head>
+
   <body>
     <h1>Building things is fun</h1>
     <div>
@@ -19,10 +21,10 @@
         <li>list</li>
         <li>on the first level</li>
           <ol>
-          <li>but it</li>
-          <li>can go</li>
-          <li>deeper</li>
-          <li>and notice I have roman numbering!</li>        
+            <li>but it</li>
+            <li>can go</li>
+            <li>deeper</li>
+            <li>and notice I have roman numbering!</li>        
           </ol>
         <li>back to normal</li>      
       </ul>
