--- a/week-01/day-03/exercise4/index.html
+++ b/week-01/day-03/exercise4/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<head>
-    <title>exercise4</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Code Example for Paragraph</h1>
-    <div>
-        <xmp><p></xmp>
-        <p>this is a paragraph</p>
-        <xmp></p></xmp>
-    </div>
-</body>
+<html>
+    <head>
+        <title>exercise4</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <h1>Code Example for Paragraph</h1>
+        <xmp>
+<p>
+  this is a paragraph
+</p>
+        </xmp>
+    </body>
+</html>
