feat(day-04): fix padding

--- a/week-01/day-04/index.html
+++ b/week-01/day-04/index.html
@@ -64,7 +64,7 @@
                   </div> <!--checkbox-right-->
                 </div> <!--checkbox-->
               </div> <!--brand-->
-              <p>Többet is választhatsz!</p>
+              <p class="note">Többet is választhatsz!</p>
             </form>
           </div> <!--personal-->
           
@@ -107,19 +107,21 @@
             </div> <!--cv-->
             <div class="conditions">
               <input type="checkbox" id="terms">
-              <label for="terms">Elfogadom a felhasználási feltételeket</label>
+              <label class="check-terms" for="terms">Elfogadom a <a href="#">felhasználási feltételeket</a></label>
             </div> <!--conditions-->
           </form> <!--form3-->
         </div> <!--content2-->
 
         <footer>
-          <form class="form4">
-            <div class="save">
-              <input type="submit" value="mentés"/>
-            </div> <!--save-->
-            <div class="delete">
-              <input type="button" value="űrlap törlése"/> 
-            </div> <!--delete-->
+          <form>
+            <div class="buttons">
+              <div class="save">
+                <input type="submit" value="mentés"/>
+              </div> <!--save-->
+              <div class="delete">
+                <input type="reset" value="űrlap törlése"/> 
+              </div> <!--delete-->
+            </div>
           </form> <!--form4-->
         </footer>
 
