--- a/week-01/day-03/exercise3/index.html
+++ b/week-01/day-03/exercise3/index.html
@@ -8,13 +8,13 @@
 
     <body>
         <div>
-            <div>
+            <div class="north">
                 <h1>North</h1>
                 <h1>North</h1>
             </div>
         </div>
         <div>
-            <div>
+            <div class="south">
                 <h1>South</h1>
                 <h1>South</h1>
             </div>
