--- a/week-01/day-03/exercise8/index.html
+++ b/week-01/day-03/exercise8/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <div>
+        <div class="first-row">
             <p>1</p>
             <p>2</p>
             <p>3</p>
@@ -17,7 +17,7 @@
             <p>9</p>
             <p>10</p>            
         </div>
-        <div>
+        <div class="second-row">
             <p>11</p>
             <p>12</p>
             <p>13</p>
