feat(day-03):finish exercise10

--- a/week-01/day-03/exercise10/index.html
+++ b/week-01/day-03/exercise10/index.html
@@ -4,12 +4,13 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
     </head>
+    
     <body>
-        <p>Domestic duck refers to any species of duck that has been domesticated. They may be reared for meat, eggs, or down.
+        <p>Domestic duck refers to any species of duck that has been domesticated.
         </p>
-        <p>Domestic ducks are also kept for show, as pets, or for their ornamental value.
+        <p>They may be reared for meat, eggs, or down. Domestic ducks are also kept for show, as pets, or for their ornamental value.
         </p>
-        <p>Almost all varieties of domestic duck apart from the Muscovy duck (Cairina moschata) are descended from the mallard (Anas platyrhynchos).
+        <p>Almost all varieties of domestic duck apart from the Muscovy duck (Cairina moschata) are descended from the mallard (Anas platyrhynchos). Mallard ducks were first domesticated in Southeast Asia.
         </p>        
     </body>
 </html>
