--- a/js/gallery/index.html
+++ b/js/gallery/index.html
@@ -8,28 +8,27 @@
     </head>
   <body>
       <div class="row">
-          <div class="col-1"></div>
-          <div class="col-1">
-            <button>left</button>
-          </div>
-          <div class="col-8">
-              <img src="..." class="img-fluid" alt="Responsive image">
-              <h2></h2>
-              <p></p>
-
-              <div class="row">
-                <div class="col-1"></div>
-                <div class="col-10">
-                  <img src="..." alt="..." class="img-thumbnail">
-                </div>
-                <div class="col-1"></div>                
-              </div>
-          </div>
-          <div class="col-1">
-            <button>right</button>
-          </div>
-          <div class="col-1"></div>
+        <div class="col-1"></div>
+        <div class="col-1">
+          <button>left</button>
         </div>
+        <div class="col-8">     
+          <img src="..." class="img-fluid" alt="Responsive image">
+          <h2></h2>
+          <p></p>
+        </div>
+        <div class="col-1">
+          <button>right</button>
+        </div>
+         <div class="col-1"></div>
+      </div>
+
+      <div class="row">
+        <div id="thumbnail-images">
+                  <!-- <img src="..." alt="..." class="img-thumbnail"> -->
+       </div>
+      </div>
+          
       <script src="gallery.js"></script>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
