--- a/js/gallery/index.html
+++ b/js/gallery/index.html
@@ -5,6 +5,11 @@
       <title>Gallery</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <style>
+        .hide {
+          display: none;
+        }
+      </style>
     </head>
   <body>
       <div class="row">
@@ -12,23 +17,16 @@
         <div class="col-1">
           <button>left</button>
         </div>
-        <div class="col-8">     
-          <img src="..." class="img-fluid" alt="Responsive image">
-          <h2></h2>
-          <p></p>
+        <div id="main-image" class="col-8">
         </div>
         <div class="col-1">
           <button>right</button>
         </div>
          <div class="col-1"></div>
       </div>
-
       <div class="row">
-        <div id="thumbnail-images">
-                  <!-- <img src="..." alt="..." class="img-thumbnail"> -->
-       </div>
-      </div>
-          
+        <div id="thumbnail-images"></div>
+      </div>         
       <script src="gallery.js"></script>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
