go right is working

--- a/js/gallery/index.html
+++ b/js/gallery/index.html
@@ -9,6 +9,9 @@
         .hide {
           display: none;
         }
+        /* #main-image {
+          
+        } */
       </style>
     </head>
   <body>
