change buttons to arrows

--- a/js/gallery/index.html
+++ b/js/gallery/index.html
@@ -8,16 +8,27 @@
         .hide {
           display: none;
         }
-        /* #main-image {
-          
-        } */
+        img {
+          max-width: 50%;
+        }
+        .wrapper {
+          background-color: gray;
+          width: 80%;
+          margin: auto;
+        }
+        .button {
+          display: inline-block;
+        }
+        #main-image {
+          display: inline-block;
+        }
       </style>
     </head>
   <body>
-      <div>
-        <div class="button"></div>
+      <div class="wrapper">
+        <div class="arrow"></div>
         <div id="main-image"></div>
-        <div class="button"></div>
+        <div class="arrow"></div>
       </div>
       <div>
         <div id="thumbnail-images"></div>
