add first version of gallery

--- a/js/gallery/index.html
+++ b/js/gallery/index.html
@@ -31,7 +31,7 @@
         <div class="arrow"></div>
       </div>
       <div>
-        <div id="thumbnail-images"></div>
+        <div class="thumbnail-images" id="thumbnail-images"></div>
       </div>         
       <script src="gallery.js"></script>
   </body>
