add galleryref.js, element class for the photo view

--- a/js/gallery2/index.html
+++ b/js/gallery2/index.html
@@ -30,6 +30,6 @@
       <div class="forward-arrow"></div>
     </div>
     <ul class="thumbnail"></ul>
-    <script src="gallery.js"></script>
+    <script src="galleryref.js"></script>
   </body>
 </html>
