--- a/js/gallery2/index.html
+++ b/js/gallery2/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="main">
       <div class="back-arrow"></div>
-      <div class="main-image"></div>
+      <div class="main"></div>
       <div class="forward-arrow"></div>
     </div>
     <ul class="thumbnail"></ul>
