--- a/js/gallery2/index.html
+++ b/js/gallery2/index.html
@@ -29,7 +29,7 @@
       <div class="main"></div>
       <div class="forward-arrow"></div>
     </div>
-    <ul class="thumbnail"></ul>
+    <div class="thumbnail"></div>
     <script src="galleryref.js"></script>
   </body>
 </html>
