--- a/js/gallery2/index.html
+++ b/js/gallery2/index.html
@@ -24,12 +24,12 @@
     </style>
   </head>
   <body>
-    <div class="main">
+    <div>
       <div class="back-arrow"></div>
       <div class="main"></div>
       <div class="forward-arrow"></div>
     </div>
     <div class="thumbnail"></div>
-    <script src="galleryref.js"></script>
+    <script src="galleryref2.js"></script>
   </body>
 </html>
